# minidns

./: Cargo.toml  README.md  build.rs  mk_target.bat
appconfig/src/: lib.rs
asynclog/: Cargo.toml
asynclog/src/: lib.rs
release/: mdns  mdns-cli
resources/: hosts.conf  mdns.conf  mdns.service
src/: ansi_color.rs  ansicolor.rs  appconf.rs  bufutil.rs  dnsserver.rs  dnsutil.rs  hostsconf.rs  logutils.rs  logwriter.rs  main.rs  mdns-cli.rs  mdns.rs  tinydns-cli.rs
