# cargo build --release --target=x86_64-unknown-linux-musl
# cargo test --bin mdns -- --nocapture test_hostsconfig
[package]
name = "minidns"
version = "1.0.2"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2021"
description = "mini static and dynamic dns server"
repository = "https://github.com/kivensoft/minidns"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "mdns"
path = "src/main.rs"

[[bin]]
name = "mdns-cli"
path = "src/tinydns-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
time = "0.3"
simple_config_parser = "1.0"
getopts = "0.2"
rand = "0.8"
mio = { version = "0.8", features = [ "net", "os-poll" ] }
md5 = "0.7"