# cargo build --release --target=x86_64-unknown-linux-musl
# cargo test --bin mdns -- --nocapture test_hostsconfig
[package]
name = "minidns"
version = "1.0.2"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2021"
description = "mini static and dynamic dns server"
repository = "https://github.com/kivensoft/minidns"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "mdns"
path = "src/mdns.rs"

[[bin]]
name = "mdns-cli"
path = "src/mdns-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
mio = { version = "0.8", features = [ "net", "os-poll" ] }
md5 = "0.7"
asynclog = { version = "1.0", path = "asynclog" }
appconfig = { version = "1.0", path = "appconfig" }
ansicolor = { version = "1.0", path = "ansicolor" }
