# cargo build --release --target=x86_64-unknown-linux-musl
# cargo test --bin mdns -- --nocapture test_hostsconfig
[package]
name = "minidns"
version = "2.1.0"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2024"
description = "mini static and dynamic dns server"
repository = "https://github.com/kivensoft/minidns"
build = "build.rs"

[profile.dev]
debug = false

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
incremental = false
panic = 'abort'

[[bin]]
name = "mdns"
path = "src/mdns.rs"

[[bin]]
name = "mdns-cli"
path = "src/mdns-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
mio = { version = "1", features = [ "net", "os-poll" ] }
md5 = "0.7"
appcfg = "1.0.2"
asynclog = "1"
ansicolor = "1"
